# curldock

./: .env  .gitignore  Cargo.toml  LICENSE  project-roadmap.md  readme.md  run-prod.sh  run-release.sh  test.sh  todo.md
doc/: api.md  architecture.md  backend-processing-vs-frontend-processing.md  curl_manager.md  next-steps.md  tech-spec.md
docker/: Dockerfile  build.sh  buildlocal.sh  testing-build.sh
front/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
front/src/: .eslintrc.cjs  App.tsx
front/src/api/: api.md  (+14 more)
rest-examples/: example.sh  list.sh  main.json  test-get.sh
rest-examples/v1/: example.sh  get-example.sh  listscripts.sh  scriptdetails.sh
src/: config.rs  lib.rs  main.rs
src/api/: mod.rs  routes.rs
src/config/: config.rs  mod.rs  singleton.rs
src/curl_gateway/: errors.rs  mod.rs  models.rs  utils.rs
src/error_handling/: mod.rs
src/main/: main-standard.md  main-test-check_check_curl_command_result.md  main-test-check_curl_command_parse.md
src/revproxy/: routes.rs
src/script_manager/: design.md  errors.rs  manager.rs  mod.rs  models.rs  singleton.rs
src/test_endpoints/: mod.rs  routes.rs
test-assets/: call_curl_01.sh  data.json  expected_generate_curl_command_01.sh  expected_generate_curl_command_02.sh  expected_generate_curl_command_03.sh  expected_generate_curl_command_04.sh  expected_get_command_args_and_environment_vars_02.args  expected_get_command_args_and_environment_vars_02.env_vars  expected_result_curl_command_03.json  expected_result_curl_command_04.json
tests/: test_curl.rs
(+123 files in other folders)
