[package]
name = "curldock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
awc = "3.5.0"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
envy = "0.4.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
